--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="C:\Users\bobo1\Desktop\WEBDEVELOPMENT\GITHUB\front end dev challenges\profile-card-component-main\profile-card-component-main\images\favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
 
   <title>elprofe-DR | Frontend Mentor | Profile card component</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-  <link rel="stylesheet" href="C:\Users\bobo1\Desktop\WEBDEVELOPMENT\GITHUB\front end dev challenges\profile-card-component-main\profile-card-component-main\upload github\styles.css">
+  <link rel="stylesheet" href="styles.css">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution {
@@ -26,8 +26,8 @@
 <body>
   <main>
     <div class="card">
-      <img class="bg-img-top-div" src="C:\Users\bobo1\Desktop\WEBDEVELOPMENT\GITHUB\front end dev challenges\profile-card-component-main\profile-card-component-main\images\bg-pattern-card.svg" alt="top-bg-img">
-      <img class="img-victor" src="C:\Users\bobo1\Desktop\WEBDEVELOPMENT\GITHUB\front end dev challenges\profile-card-component-main\profile-card-component-main\images\image-victor-modified.png" alt="vict-img">
+      <img class="bg-img-top-div" src="bg-pattern-card.svg" alt="top-bg-img">
+      <img class="img-victor" src="image-victor-modified.png" alt="vict-img">
       <div class="card-body">
         <div class="top-txt">
           <strong class="txt-head">Victor Crest</strong>
